# proyecto-final-programacion

./: .gitignore  ;w  CMakeLists.txt  MyProject  README.md  raycaster.sln
assets/data/: map1.txt  map2.txt
docs/: AmmoBox_8h_source.html  Animated_8h_source.html  Animation_8h_source.html  Canvas_8h_source.html  Drawable_8h_source.html  EnemyManager_8h_source.html  Enemy_8h_source.html  Entity_8h_source.html  Enumerations_8h.html  Enumerations_8h__dep__incl.map  Enumerations_8h__dep__incl.md5  Enumerations_8h_source.html  FileReader_8h_source.html  Game_8h_source.html  HealthBox_8h_source.html  ItemManager_8h_source.html  Item_8h_source.html  Lamp_8h_source.html  Map_8h_source.html  MeleeEnemy_8h_source.html  Pickup_8h_source.html  Player_8h_source.html  Point2D_8h_source.html  Projectile_8h_source.html  RangedEnemy_8h_source.html  RayCaster_8h_source.html  SoundManager_8h_source.html  TextureManager_8h_source.html  Weapon_8h_source.html  annotated.html  classAmmoBox-members.html  classAmmoBox.html  classAmmoBox__coll__graph.map  classAmmoBox__coll__graph.md5  classAmmoBox__inherit__graph.map  classAmmoBox__inherit__graph.md5  classAmmoBox_ac0f763b334aefc985b077d0a5066451c_cgraph.map  classAmmoBox_ac0f763b334aefc985b077d0a5066451c_cgraph.md5  classAnimated-members.html  classAnimated.html  (+219 more)
raycaster/: Ammo.cpp  Ammo.h  AmmoBox.cpp  AmmoBox.h  Animated.h  Animation.cpp  Animation.h  Canvas.cpp  Canvas.h  Drawable.cpp  Drawable.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Entity.cpp  Entity.h  Enumerations.h  FileReader.cpp  FileReader.h  Game.cpp  Game.h  Health.cpp  Health.h  HealthBox.cpp  HealthBox.h  Item.cpp  Item.h  ItemManager.h  Lamp.cpp  Lamp.h  Map.cpp  Map.h  MeleeEnemy.cpp  MeleeEnemy.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Player.cpp  (+15 more)
src/: AmmoBox.h  Animated.h  Animation.h  Canvas.cpp  Canvas.h  Drawable.cpp  Drawable.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Entity.cpp  Entity.h  Enumerations.h  FileReader.cpp  FileReader.h  Game.cpp  Game.h  HealthBox.cpp  HealthBox.h  Item.h  ItemManager.cpp  ItemManager.h  Lamp.h  Map.cpp  Map.h  MeleeEnemy.cpp  MeleeEnemy.h  Pickup.h  Player.cpp  Player.h  Point2D.h  Projectile.cpp  Projectile.h  RangedEnemy.cpp  RangedEnemy.h  RayCaster.h  Raycaster.cpp  SoundManager.cpp  SoundManager.h  (+5 more)
(+90 files in other folders)
